--- a/web_root/index.html
+++ b/web_root/index.html
@@ -9,7 +9,15 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Welcome to My Website</h1>
+
+        <h2>WebSocket Chat</h2>
+        <form action="" onsubmit="sendMessage(event)">
+            <input type="text" id="messageText" autocomplete="off"/>
+            <button>Send</button>
+        </form>
+        <ul id='messages'>
+        </ul>
     </main>
 	<script src="index.js"></script>
   </body>
