Add stream of cube vertices

--- a/web_root/index.html
+++ b/web_root/index.html
@@ -18,7 +18,14 @@
         </form>
         <ul id='messages'>
         </ul>
+        <div id="3d-container"></div>
     </main>
+  <script src="js/lib/three.js"></script>
+  <script src="js/lib/OrbitControls.js"></script>
+  <script src="js/lib/GLTFLoader.js"></script>
+
+  <script src="Viewer.js"></script>
 	<script src="index.js"></script>
+
   </body>
 </html>
