Refactor front and backend

--- a/web_root/index.html
+++ b/web_root/index.html
@@ -24,8 +24,8 @@
   <script src="js/lib/OrbitControls.js"></script>
   <script src="js/lib/GLTFLoader.js"></script>
 
-  <script src="Viewer.js"></script>
-	<script src="index.js"></script>
+  <script src="js/Viewer.js"></script>
+	<script src="js/index.js"></script>
 
   </body>
 </html>
